# compare_concordance

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: release.yml  test-suite.yml
compare_concordance/: __init__.py  bindings.py  bootstrapping.py  compareC.c  compare_concordance.py
test/: __init__.py  test_compare_concordance.py
