[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["compare_concordance"]

[project]
name = "compare_concordance"
version = "0.0.2"
authors = [
  { name="Walter Nelson", email="walterj.nelson@mail.utoronto.ca" },
]
description = "Statistical inference about right-censored c-indices"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
dependencies = [
    "numpy",
    "scipy",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/wjn0/compare_concordance"
"Bug Tracker" = "https://github.com/wjn0/compare_concordance/issues"
